# mcp-hotswap-agent

./: .gitignore  Makefile  README.md  pyproject.toml
agents/: chat_history.py  config.py  main.py  mcp_client.py  metrics.py  router_agent.py  tool_registry.py
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
frontend/: app.py
monitoring/: grafana-dashboard.json  prometheus.yml
scripts/: e2e_smoke.sh  grafana_load_test.sh  load_test.sh  start.sh
servers/: calculator_server.py  notes_creator_server.py  web_research_server.py  youtube_summary_server.py
tests/: conftest.py  test_chat_history.py  test_error_scenarios.py  test_hotswap.py  test_integration.py  test_param_correction.py  test_tool_registry.py
